--- a/public/post/2020-01-27-using-tidytext-to-compare-samples-of-dreams.Rmd
+++ b/public/post/2020-01-27-using-tidytext-to-compare-samples-of-dreams.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 2.3 - Using tidytext to compare samples of dreams
+title: "2.3 - Using tidytext to compare samples of dreams"
 author: Christian Ryan
 date: '2020-01-27'
 slug: using-tidytext-to-compare-samples-of-dreams
