--- a/public/post/2019-11-30-pulling-text-data-from-the-internet.Rmd
+++ b/public/post/2019-11-30-pulling-text-data-from-the-internet.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 2.1 - Pulling text data from the internet
+title: "2.1 - Pulling text data from the internet"
 author: Christian Ryan
 date: '2019-11-30'
 slug: pulling-text-data-from-the-internet
